[package]
name = "percent-encoding-command"
version = "0.1.4"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["command", "percent-encoding", "encode", "decode"]
description = "A command for percent-encoding conversion."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pct"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.42"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
percent-encoding = "2.1.0"

[dev-dependencies]
assert_cmd = "1.0.7"
pathdiff = "0.2.0"
predicates = "2.0.0"
tempfile = "3.2.0"
